# Maze-Generator

./: .gitignore  CMakeLists.txt  README.md
src/: Doxyfile  Makefile  title.md
src/controller/: GenerationController.cc  GenerationController.h
src/maps/: simple.mp
src/model/: GenerationModel.cc  GenerationModel.h  RouteModel.cc  RouteModel.h
src/tests/: generation_tests.cc  route_search_tests.cc
src/tests/routing cases/: multiple_ways.mp  no_way.mp  one_cell.mp
src/ui/: main.ui  styles.css
src/view/: MainWindow.cc  MainWindow.h
